reintroduce Pixel Props so Cheetah can pass SN